syntax = "proto3";
 
package discount;
 
service DiscountService {

  //Unary Rpc
  rpc GetDiscount(DiscountRequest) returns (DiscountResponse);

}

message DiscountRequest {
  string code = 1;
}

message DiscountResponse {
  uint32 percentage = 1;
}